# gwei-names

./: .gas-snapshot  .gitignore  .railwayignore  Dockerfile  Integrators.md  README.md  foundry.toml
brand/: README.md
chat/: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  server.ts  tsconfig.json  vite.config.ts
chat/crypto-wasm/: Cargo.toml
chat/crypto-wasm/src/: lib.rs
chat/public/: theme-init.js
chat/scripts/: benchmark-cold-start.ts  create-batcher-key.ts  publish-roundtrip.ts  write-cast-blob-payload.ts
chat/src/: app.ts  batcher.test.ts  batcher.ts  blob-batch.test.ts  blob-batch.ts  browser-crypto.ts  crypto.ts  encoding.ts  envelope.test.ts  envelope.ts  gns-chat.test.ts  gns-chat.ts  gns-directory.test.ts  gns-directory.ts  handshake.test.ts  handshake.ts  protocol.ts  relay.ts  settings.test.ts  settings.ts  storage.ts  (+3 more)
claim-page/: package-lock.json  package.json
dapp/: guide.html  gweiNS.html  gweiNS.test.js
diff/: Dockerfile  index.html
gateway/: README.md  package-lock.json  package.json  worker.js  worker.test.js  wrangler.toml
script/: Deploy.s.sol  DeployGnsUniversalResolver.s.sol  DeployHumanRegistrar.s.sol
sdk/: .npmignore  CHANGELOG.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
src/: GnsUniversalResolver.sol  HumanRegistrar.sol  HumanRegistry.sol  NameNFT.sol  SubdomainRegistrar.sol
test/: BlobSpaceSegments.t.sol  GnsUniversalResolver.t.sol  HumanRegistrar.t.sol  NameNFT.t.sol  SubdomainRegistrar.t.sol
(+39 files in other folders)
